<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/cat">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:background="#B000897B"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_plus"
            android:layout_width="38dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/plus"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:hint="@string/et_hint_name"
            android:autofillHints="@string/et_hint_name"
            android:inputType="text"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#F5FFFFFF"
            />

        <CheckBox
            android:id="@+id/cb_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            android:theme="@style/StarTheme"
            style="?android:attr/starStyle"
            />

    </LinearLayout>

    <ListView
        android:id="@+id/lv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="#00CCCCCC"
        android:divider="@null"
        android:dividerHeight="2dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_archive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_show_archive"
        android:textSize="14sp"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center"
        />

    <ListView
        android:id="@+id/lv_archive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="5dp"
        android:background="#00FFFFFF"
        android:divider="@null"
        android:dividerHeight="2dp"
        android:padding="10dp"
        android:visibility="invisible"/>

</LinearLayout>